tests/syntax_error/parentheses_array_count.jou
def blah() -> None:
    thing: byte[10]
    x = array_count thing  # Error: value after array_count must be in parentheses, e.g. array_count(foo)
